[gd_scene load_steps=3 format=3 uid="uid://cfufdfuph41sj"]

[ext_resource type="Script" uid="uid://bgj7pa616js5n" path="res://scripts/MainMenu.gd" id="1_yqorp"]

[sub_resource type="LabelSettings" id="LabelSettings_ukcvp"]
font_size = 64
font_color = Color(0.01163378, 0.0016757202, 0.99999994, 1)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_yqorp")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Titulo" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GRAFOS QUEST"
label_settings = SubResource("LabelSettings_ukcvp")

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnNovoJogo" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Novo Jogo"

[node name="BtnCarregar" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Carregar Jogo"

[node name="BtnArcade" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Modo Arcade"

[node name="BtnLeaderboard" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ver Leaderboard"

[node name="BtnSair" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Sair do jogo"
